[package]
name = "Racker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
prettytable = "0.10.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde  = { version = "1.0.183", features = ["derive"] }
tabular = "0.2.0"
url = "2.4.0"
